test/conformance/chainsaw/cli/apply/apply-gpols-in-cluster-mode/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-gpols-in-cluster-mode
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl create namespace test-ns-1
  - name: step-02
    try:
    - script:
        content: kyverno apply policy.yaml --cluster
        check:
          (contains($stdout, 'Generation completed successfully.')): true
